--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,8 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boardy</title>
   </head>
